# boltz-pvc

./: INSTALL_AURORA_QUICKSTART.sh  pyproject.toml
readmes/: AURORA_INSTALLATION.md  CUDA_DEPENDENCIES_ANALYSIS.md  DEPENDENCY_REMOVAL_COMPLETE.md  FAIRSCALE_REMOVAL_SUMMARY.md  FROM_SCRATCH_TEST_README.md  IMPLEMENTATION_SUMMARY.md  INTEL_XPU_INFERENCE_SUMMARY.md  PYPROJECT_CHANGES_SUMMARY.md  VANILLA_INFERENCE_README.md
src/boltz/inference/: __init__.py  loader.py  runner.py
src/boltz/model/models/: boltz1.py  boltz2.py
src/boltz/model/modules/: transformers.py  trunk.py
tests/: example_custom_pipeline.py  example_simple_inference.py  test_boltz_from_scratch.py  test_fairscale_removal.py  test_vanilla_inference.py
